# catan-rust

./: Cargo.toml  README.md  build.rs
assets/banner/: viewer_banner.kra
assets/cards/: brick.png.kra  grain.png.kra  info.txt  knight.png.kra  lumber.png.kra  monopoly.png.kra  ore.png.kra  road_building.png.kra  victory_point.png.kra  wool.png.kra  year_of_plenty.png.kra
assets/game/: icon.icns
assets/icons/: rules.png.kra  settings.png.kra  volume.png.kra
assets/placements/: road.png.kra
assets/tiles/: desert.png.kra  ore.png.kra  wool.png.kra
src/: audio.rs  game.rs  lib.rs  main.rs
src/backend/: game.rs  info.txt
src/backend/networking/: bootstrap.rs  client.rs  config.rs  game_request.rs  mod.rs  protocol.rs  rendezvous.rs  server.rs  stun_request.rs  testing.md  transport.rs
src/backend/networking2/: mod.rs  run.rs  server.rs  shared.rs
src/frontend/: bevy.rs  mod.rs  ui.rs
src/frontend/assets/: info.txt
src/frontend/interface/: endscreen.rs  game_overlay.rs  game_panel.rs  game_panel_wip_broken.rs  info_panel.rs  lobby_menu.rs  log_panel.rs  main_menu.rs  mod.rs  multiplayer_menu.rs  rules_panel.rs  settings_panel.rs  style.rs  volume_panel.rs
src/frontend/system/: audio.rs  camera.rs  chat.rs  input.rs  mod.rs  multiplayer.rs  panels.rs  render.rs  transition.rs
src/frontend/visual/: banner.rs  cards.rs  city.rs  dice.rs  icons.rs  mod.rs  road.rs  settlement.rs  startscreen.rs  tile.rs
src/frontend/visuals/: city.rs  road.rs  settlement.rs  tile.rs
src/networking/: bootstrap.rs  client.rs  config.rs  game_server.rs  lib_n.rs  message.rs  mod.rs  protocol.rs  server.rs  stun_request.rs  transport.rs
src/networking2/: client.rs  run.rs  server.rs
src/networking_test/: bootstrap.rs  client.rs  protocol.rs  server.rs  transport.rs
(+2 files in other folders)
