[package]
name = "catan-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.0"
bevy_egui = "0.39.0"
rand = "0.9.2"
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
lightyear = "0.25.5"
crossbeam-channel = "0.5"
clap = "4.5.54"

[[bin]]
name = "server"
path = "src/networking2/bin/server.rs"

[[bin]]
name = "client"
path = "src/networking2/bin/client.rs"