[package]
name = "catan-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
bevy_egui = "0.39.0"
rand = "0.9.2"
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
image = "0.25.9"
bevy_kira_audio = { version = "0.25.0", features = ["wav"] }
