[package]
name = "catan-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18" }
bevy_egui = "0.39.0"
bevy_ecs = { version = "0.18" }
bevy_quinnet = "0.20.0"
quinn = "0.11.9"

image = "0.25.9"
bevy_kira_audio = { version = "0.25.0", features = ["mp3", "wav"] }

renet = { version = "1.2.0" }
renetcode = { version = "1.0.0" }
log = "0.4.22"
env_logger = "0.11.8"

rand = "0.9.2"
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

crossbeam-channel = "0.5"
clap = "4.5.54"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
bytes = "1.11.0"
bincode = "1.3.3"

[lib]
name = "catan_rust"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/networking/bin/server.rs"

[[bin]]
name = "client"
path = "src/networking/bin/client.rs"

[[bin]]
name = "randy"
path = "src/networking/bin/rendezvous.rs"


